# awesome-qt-snake

./: CMakeLists.txt  README.md  today-i-learned.md
src/snakecore/: CMakeLists.txt  foodgenerator.cpp  foodgenerator.h  game.cpp  game.h  globals.h  snake.cpp  snake.h  snakecore.h
src/widgetapp/: CMakeLists.txt  gameboardview.cpp  gameboardview.h  gameviewmodel.cpp  gameviewmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  snakeview.cpp  snakeview.h
tests/auto/snakecore/: CMakeLists.txt  test_foodgenerator.cpp  test_game.cpp  test_snake.cpp
tests/auto/widgetapp/: CMakeLists.txt  test_gameviewmodel.cpp
